--- a/Microservices.Demo.Report.API/application.yml
+++ b/Microservices.Demo.Report.API/application.yml
@@ -1,6 +1,6 @@
 ServicesUrl:
-    ProductApiUrl: http://Microservices.Demo.Product.API/api/product 
-    PolicyApiUrl : http://Microservices.Demo.Policy.API/api/policy 
+    ProductApiUrl: http://Microservices.Demo.Product.API/api/products 
+    PolicyApiUrl : http://Microservices.Demo.Policy.API/api/policies
 RabbitMQSettings:
     Username: admin
     Password: admin
